force-app/main/default/objects/Evony_Account__c/Evony_Account__c.object-meta.xml
<CustomObject>
    <label>Evony Account</label>
    <nameField>
        <label>Evony Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evony Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>