force-app/main/default/objects/Evony_Account__c/fields/CommonDays_3__c.field-meta.xml
<CustomField>
    <fullName>CommonDays_3__c</fullName>
    <description>3 Days of common speedups</description>
    <inlineHelpText>3 Days of common speedups</inlineHelpText>
    <label>3 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>