force-app/main/default/objects/Evony_Account__c/fields/CommonDays_7__c.field-meta.xml
<CustomField>
    <fullName>CommonDays_7__c</fullName>
    <description>7 Days of common speedups</description>
    <inlineHelpText>7 Days of common speedups</inlineHelpText>
    <label>7 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>