force-app/main/default/objects/Evony_Account__c/fields/CommonHours_12__c.field-meta.xml
<CustomField>
    <fullName>CommonHours_12__c</fullName>
    <description>12 Hours of common speedups</description>
    <inlineHelpText>12 Hours of common speedups</inlineHelpText>
    <label>12 Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>