force-app/main/default/objects/Evony_Account__c/fields/CommonHours_24__c.field-meta.xml
<CustomField>
    <fullName>CommonHours_24__c</fullName>
    <description>24 Hours of common speedups</description>
    <inlineHelpText>24 Hours of common speedups</inlineHelpText>
    <label>24 Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>