force-app/main/default/objects/Evony_Account__c/fields/CommonHours_3__c.field-meta.xml
<CustomField>
    <fullName>CommonHours_3__c</fullName>
    <description>3 Hours of common speedups</description>
    <inlineHelpText>3 Hours of common speedups</inlineHelpText>
    <label>3 Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>