force-app/main/default/objects/Evony_Account__c/fields/CommonMinutes_10__c.field-meta.xml
<CustomField>
    <fullName>CommonMinutes_10__c</fullName>
    <description>10 Minutes of common speedups</description>
    <inlineHelpText>10 Minutes of common speedups</inlineHelpText>
    <label>10 Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>