force-app/main/default/objects/Evony_Account__c/fields/CommonMinutes_15__c.field-meta.xml
<CustomField>
    <fullName>CommonMinutes_15__c</fullName>
    <description>15 Minutes of common speedups</description>
    <inlineHelpText>15 Minutes of common speedups</inlineHelpText>
    <label>15 Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>