force-app/main/default/objects/Evony_Account__c/fields/CommonMinutes_30__c.field-meta.xml
<CustomField>
    <fullName>CommonMinutes_30__c</fullName>
    <label>30 Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>