force-app/main/default/objects/Evony_Account__c/fields/ConstructionHours_12__c.field-meta.xml
<CustomField>
    <fullName>ConstructionHours_12__c</fullName>
    <description>12 Hours of construction speedups</description>
    <inlineHelpText>12 Hours of construction speedups</inlineHelpText>
    <label>12 Hours Construction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>