force-app/main/default/objects/Evony_Account__c/fields/ConstructionHours_1__c.field-meta.xml
<CustomField>
    <fullName>ConstructionHours_1__c</fullName>
    <description>1 Hour of construction speedups</description>
    <inlineHelpText>1 Hour of construction speedups</inlineHelpText>
    <label>1 Hour Construction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>