force-app/main/default/objects/Evony_Account__c/fields/ConstructionHours_24__c.field-meta.xml
<CustomField>
    <fullName>ConstructionHours_24__c</fullName>
    <description>24 Hours of construction speedups</description>
    <inlineHelpText>24 Hours of construction speedups</inlineHelpText>
    <label>24 Hours Construction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>