force-app/main/default/objects/Evony_Account__c/fields/ConstructionMinutes_10__c.field-meta.xml
<CustomField>
    <fullName>ConstructionMinutes_10__c</fullName>
    <description>5 Minutes of construction speedups</description>
    <inlineHelpText>5 Minutes of construction speedups</inlineHelpText>
    <label>10 Minutes Construction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>