force-app/main/default/objects/Evony_Account__c/fields/ConstructionMinutes_15__c.field-meta.xml
<CustomField>
    <fullName>ConstructionMinutes_15__c</fullName>
    <description>15 Minutes of construction speedups</description>
    <inlineHelpText>15 Minutes of construction speedups</inlineHelpText>
    <label>15 Minutes Construction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>