force-app/main/default/objects/Evony_Account__c/fields/ConstructionMinutes_30__c.field-meta.xml
<CustomField>
    <fullName>ConstructionMinutes_30__c</fullName>
    <description>30 Minutes of construction speedups</description>
    <inlineHelpText>30 Minutes of construction speedups</inlineHelpText>
    <label>30 Minutes Construction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>