force-app/main/default/objects/Evony_Account__c/fields/FoodBox_10K__c.field-meta.xml
<CustomField>
    <fullName>FoodBox_10K__c</fullName>
    <label>10K Food Box</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>