force-app/main/default/objects/Evony_Account__c/fields/FoodBox_500K__c.field-meta.xml
<CustomField>
    <fullName>FoodBox_500K__c</fullName>
    <label>500K Food Box</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>