force-app/main/default/objects/Evony_Account__c/fields/LumberBox_100K__c.field-meta.xml
<CustomField>
    <fullName>LumberBox_100K__c</fullName>
    <label>100K Lumber Box</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>