force-app/main/default/objects/Evony_Account__c/fields/LumberBox_1M__c.field-meta.xml
<CustomField>
    <fullName>LumberBox_1M__c</fullName>
    <label>1M Lumber Box</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>