force-app/main/default/objects/Evony_Account__c/fields/OreBox_1k__c.field-meta.xml
<CustomField>
    <fullName>OreBox_1k__c</fullName>
    <label>1K Ore Box</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>