force-app/main/default/objects/Evony_Account__c/fields/OreBox_5M__c.field-meta.xml
<CustomField>
    <fullName>OreBox_5M__c</fullName>
    <label>5M Ore Box</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>