force-app/main/default/objects/Evony_Account__c/fields/ResearchingHours_12__c.field-meta.xml
<CustomField>
    <fullName>ResearchingHours_12__c</fullName>
    <description>12 Hours of researching speedups</description>
    <inlineHelpText>12 Hours of researching speedups</inlineHelpText>
    <label>12 Hours Researching</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>