force-app/main/default/objects/Evony_Account__c/fields/ResearchingHours_1__c.field-meta.xml
<CustomField>
    <fullName>ResearchingHours_1__c</fullName>
    <description>1 Hour of researching speedups</description>
    <inlineHelpText>1 Hour of researching speedups</inlineHelpText>
    <label>1 Hour Researching</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>