force-app/main/default/objects/Evony_Account__c/fields/ResearchingHours_24__c.field-meta.xml
<CustomField>
    <fullName>ResearchingHours_24__c</fullName>
    <description>24 Hours of researching speedups</description>
    <inlineHelpText>24 Hours of researching speedups</inlineHelpText>
    <label>24 Hours Researching</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>