force-app/main/default/objects/Evony_Account__c/fields/ResearchingMinutes_10__c.field-meta.xml
<CustomField>
    <fullName>ResearchingMinutes_10__c</fullName>
    <description>10 Minutes of researching speedups</description>
    <inlineHelpText>10 Minutes of researching speedups</inlineHelpText>
    <label>10 Minutes Researching</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>