force-app/main/default/objects/Evony_Account__c/fields/ResearchingMinutes_15__c.field-meta.xml
<CustomField>
    <fullName>ResearchingMinutes_15__c</fullName>
    <description>15 Minutes of researching speedups</description>
    <inlineHelpText>15 Minutes of researching speedups</inlineHelpText>
    <label>15 Minutes Researching</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>