force-app/main/default/objects/Evony_Account__c/fields/ResearchingMinutes_30__c.field-meta.xml
<CustomField>
    <fullName>ResearchingMinutes_30__c</fullName>
    <description>30 Minutes of researching speedups</description>
    <inlineHelpText>30 Minutes of researching speedups</inlineHelpText>
    <label>30 Minutes Researching</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>