force-app/main/default/objects/Evony_Account__c/fields/StoneBox_5K__c.field-meta.xml
<CustomField>
    <fullName>StoneBox_5K__c</fullName>
    <label>5K Stone Box</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>