force-app/main/default/objects/Evony_Account__c/fields/TotalCommonDays__c.field-meta.xml
<CustomField>
    <fullName>TotalCommonDays__c</fullName>
    <description>Total of common speed up in days.</description>
    <formula>TotalCommonMinutes__c / 60 / 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of common speed up in days.</inlineHelpText>
    <label>Total Common Days</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>