force-app/main/default/objects/Evony_Account__c/fields/TotalCommonMinutes__c.field-meta.xml
<CustomField>
    <fullName>TotalCommonMinutes__c</fullName>
    <description>Total of common speed up in minutes</description>
    <formula>CommonMinutes_5__c +
	CommonMinutes_10__c +
	CommonMinutes_15__c +
	CommonMinutes_30__c +
	CommonMinutes_60__c +
	(60 * CommonHours_3__c) +
	(60 * CommonHours_8__c) +
	(60 * CommonHours_12__c) +
	(60 * CommonHours_24__c) +
	(60 * 24 * CommonDays_3__c) +
	(60 * 24 * CommonDays_7__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of common speed up in minutes</inlineHelpText>
    <label>Total Common Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>