force-app/main/default/objects/Evony_Account__c/fields/TotalConstructionDays__c.field-meta.xml
<CustomField>
    <fullName>TotalConstructionDays__c</fullName>
    <description>Total of construction speed up in days.</description>
    <formula>TotalConstructionMinutes__c / 60 / 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of construction speed up in days.</inlineHelpText>
    <label>Total Construction Days</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>