force-app/main/default/objects/Evony_Account__c/fields/TotalConstructionMinutes__c.field-meta.xml
<CustomField>
    <fullName>TotalConstructionMinutes__c</fullName>
    <description>Total of construction speed up in minutes</description>
    <formula>ConstructionMinutes_5__c +
ConstructionMinutes_10__c +
ConstructionMinutes_15__c +
ConstructionMinutes_30__c +
(60 * ConstructionHours_1__c) +
(60 * ConstructionHours_3__c) +
(60 * ConstructionHours_8__c) +
(60 * ConstructionHours_12__c) +
(60 * ConstructionHours_24__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of construction speed up in minutes</inlineHelpText>
    <label>Total Construction Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>