force-app/main/default/objects/Evony_Account__c/fields/TotalFood__c.field-meta.xml
<CustomField>
    <fullName>TotalFood__c</fullName>
    <description>Total Food</description>
    <formula>WarehouseFood__c +
(FoodBox_1K__c * 1000) +
(FoodBox_5K__c * 5000) +
(FoodBox_10K__c * 10000) +
(FoodBox_50K__c * 50000) +
(FoodBox_100K__c * 100000) +
(FoodBox_500K__c * 500000) +
(FoodBox_1M__c * 1000000) +
(FoodBox_5M__c * 5000000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Food</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>