force-app/main/default/objects/Evony_Account__c/fields/TotalLumber__c.field-meta.xml
<CustomField>
    <fullName>TotalLumber__c</fullName>
    <description>Total Lumber</description>
    <formula>WarehouseLumber__c +
(LumberBox_1K__c * 1000) +
(LumberBox_5K__c * 5000) +
(LumberBox_10K__c * 10000) +
(LumberBox_50K__c * 50000) +
(LumberBox_100K__c * 100000) +
(LumberBox_500K__c * 500000) +
(LumberBox_1M__c * 1000000) +
(LumberBox_1M__c * 5000000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Lumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>