force-app/main/default/objects/Evony_Account__c/fields/TotalOre__c.field-meta.xml
<CustomField>
    <fullName>TotalOre__c</fullName>
    <description>Total Ore</description>
    <formula>WarehouseOre__c +
(OreBox_1k__c * 1000) +
(OreBox_5K__c * 5000) +
(OreBox_10K__c * 10000) +
(OreBox_50K__c * 50000) +
(OreBox_100K__c * 100000) +
(OreBox_500K__c * 500000) +
(OreBox_1M__c * 1000000) +
(OreBox_5M__c * 5000000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Ore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>