force-app/main/default/objects/Evony_Account__c/fields/TotalResearchingDays__c.field-meta.xml
<CustomField>
    <fullName>TotalResearchingDays__c</fullName>
    <description>Total of researching speed up in days.</description>
    <formula>TotalResearchingMinutes__c / 60 / 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of researching speed up in days.</inlineHelpText>
    <label>Total Researching Days</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>