force-app/main/default/objects/Evony_Account__c/fields/TotalResearchingMinutes__c.field-meta.xml
<CustomField>
    <fullName>TotalResearchingMinutes__c</fullName>
    <description>Total of researching speed up in minutes</description>
    <formula>ResearchingMinutes_5__c +
ResearchingMinutes_10__c +
ResearchingMinutes_15__c +
ResearchingMinutes_30__c +
(60 * ResearchingHours_1__c) +
(60 * ResearchingHours_3__c) +
(60 * ResearchingHours_8__c) +
(60 * ResearchingHours_12__c) +
(60 * ResearchingHours_24__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of researching speed up in minutes</inlineHelpText>
    <label>Total Researching Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>