force-app/main/default/objects/Evony_Account__c/fields/TotalStone__c.field-meta.xml
<CustomField>
    <fullName>TotalStone__c</fullName>
    <description>Total Stone</description>
    <formula>WarehouseStone__c +
(StoneBox_1K__c * 1000) +
(StoneBox_5K__c * 5000) +
(StoneBox_10K__c * 10000) +
(StoneBox_50K__c * 50000) +
(StoneBox_100K__c * 100000) +
(StoneBox_500K__c * 500000) +
(StoneBox_1M__c * 1000000) +
(StoneBox_5M__c * 5000000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Stone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>