force-app/main/default/objects/Evony_Account__c/fields/WarehouseFood__c.field-meta.xml
<CustomField>
    <fullName>WarehouseFood__c</fullName>
    <description>The amount of Food that is stored in the Warehouse</description>
    <inlineHelpText>The amount of Food that is stored in the Warehouse</inlineHelpText>
    <label>Warehouse Food</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>