force-app/main/default/objects/Evony_Account__c/fields/WarehouseLumber__c.field-meta.xml
<CustomField>
    <fullName>WarehouseLumber__c</fullName>
    <description>The amount of Lumber that is stored in the Warehouse</description>
    <inlineHelpText>The amount of Lumber that is stored in the Warehouse</inlineHelpText>
    <label>Warehouse Lumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>